<resources>
    <string name="app_name">Student Helper</string>

    <!-- Preferences -->
    <string name="shared_preferences">prefs</string>
    <string name="current_user_key">currentUser</string>
    <string name="no_current_user">NONE</string>
    <string name="first_run">firstrun</string>
    <string name="database_present">databasePresent</string>
    <string name="users_set_key">usersSet</string>
    <string name="alarms_set_key">alarmsSetKey</string>

    <string name="database_name">shdb.db</string>

    <!-- Strings related to login -->
    <string name="prompt_student_id">Enter Student ID</string>
    <string name="action_sign_in">Sign in</string>
    <string name="timetable_no_group">NA</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Student ID errors -->
    <string name="error_invalid_username_long">ID is too long</string>
    <string name="error_invalid_username_short">ID is too short</string>
    <string name="error_invalid_username_format">ID must be numbers only</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_username_unregistered">This username is unregistered</string>

    <!-- Network Errors -->
    <string name="error_website_unavailable">Could not reach host</string>
    <string name="error_network_unavailable">No internet connection</string>

    <string name="timetable_url">"http://www.timetable.ul.ie/tt2.asp"</string>

    <!-- Bundle key values -->
    <string name="student_timetable_data_key">data</string>

    <!-- Menu values -->
    <string name="menu_header">UL Student Helper</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_sulis_button_label">Sulis</string>
    <string name="menu_sulis_button_timetable">Timetable</string>

    <!-- Sulis Values -->
    <string name="sulis_url">https://sulis.ul.ie/portal/pda/?force.login=yes</string>
    <string name="sulis_google_docs">http://docs.google.com/gview?embedded=true&amp;url=</string>
    <string name="sulis_google_domain">docs.google.com</string>
    <string name="sulis_domain">sulis.ul.ie</string>
    <string name="sulis_directory">/StudentHelper/Sulis/</string>

    <!-- PDF Reader values -->
    <string name="title_activity_pdfreader">PDFReaderActivity</string>
    <string name="pdf_key">pdfKey</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_timetable">TimetableActivity</string>


    <!-- Timetable times -->
    <string name="tt_09_text">09:00</string>
    <string name="tt_10_text">10:00</string>
    <string name="tt_11_text">11:00</string>
    <string name="tt_12_text">12:00</string>
    <string name="tt_13_text">13:00</string>
    <string name="tt_14_text">14:00</string>
    <string name="tt_15_text">15:00</string>
    <string name="tt_16_text">16:00</string>
    <string name="tt_17_text">17:00</string>

    <!-- Timetable days long-->
    <string name="tt_mon_long">Monday</string>
    <string name="tt_tue_long">Tuesday</string>
    <string name="tt_wed_long">Wednesday</string>
    <string name="tt_thu_long">Thursday</string>
    <string name="tt_fri_long">Friday</string>

    <string-array
        name="days_long">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>


    <!-- Timetable days short-->
    <string name="tt_mon_short">Mon</string>
    <string name="tt_tue_short">Tue</string>
    <string name="tt_wed_short">Wed</string>
    <string name="tt_thu_short">Thu</string>
    <string name="tt_fri_short">Fri</string>

    <!-- Timetable entry fields -->
    <string name="module">CS4084</string>
    <string name="type">LAB</string>
    <string name="group">2A</string>
    <string name="room">CSG001</string>
    <string name="title_activity_menu">MenuActivity</string>


    <string name="db_table_buildings">buildings</string>
    <string name="db_table_module_details">module_details</string>
    <string name="db_table_timetable">timetable</string>

    <!-- building table columns -->
    <string name="db_buildings_id">_id</string>
    <string name="db_buildings_name">_name</string>

    <!-- module_details table columns -->
    <string name="db_module_id">_id</string>
    <string name="db_module_title">_title</string>
    <string name="db_module_description">_description</string>
    <string name="db_module_semester">_semester</string>
    <string name="db_module_lecturer">_lecturer</string>

    <!-- timetable table columns -->
    <string name="db_timetable_id">_id</string>
    <string name="db_timetable_day">_day</string>
    <string name="db_timetable_start">_start</string>
    <string name="db_timetable_end">_end</string>
    <string name="db_timetable_module">_module</string>
    <string name="db_timetable_type">_type</string>
    <string name="db_timetable_group">_group</string>
    <string name="db_timetable_room">_room</string>

    <!-- TimetableEntryInfoActivity values -->
    <string name="timetable_entry_info_key">ttEntryInfo</string>
    <string name="te_info_textview_building_label">Building:</string>
    <string name="te_info_textview_floor_label">Floor:</string>
    <string name="te_info_textview_room_label">Room:</string>
    <string name="te_info_button_details_label">Details</string>

    <!-- ModuleInfoActivity -->
    <string name="module_info_toolbar_title">CS4084 (placeholder):</string>
    <string name="module_info_textview_course_title">Course Title:</string>
    <string name="module_info_textview_description">Description:</string>
    <string name="module_info_textview_semester">Course Title:</string>
    <string name="module_info_textview_lecturer">Lecturer:</string>
    <string name="module_info_code_key">moduleInfoCodeKey</string>
    <string name="module_info_colour_key">moduleInfoColourKey</string>

    <!-- Alarm Values -->
    <string name="alarm_intent_key">alarmIntentKey</string>
    <string name="ringer_value_intent_key">ringerValueIntentKey</string>
    <string name="timetable_alarm_set_action">setAlarmAction</string>
    <string name="timetable_silence_action">silenceAction</string>
    <string name="timetable_un_silence_action">unSilenceAction</string>
    <string name="alarm_category">alarm</string>

    <string name="alert_dialog_title_key">alertDialogTitleKey</string>
    <string name="alert_dialog_message_key">alertDialogMessageKey</string>
    <string name="alert_dialog_title">UL Student Helper</string>
    <string name="alert_dialog_silence">Your phone has been silenced</string>
    <string name="alert_dialog_un_silence">Your phone has been un-silenced</string>

    <string name="app_exit_key">EXIT_APP</string>

    <string name="alarm_toast">This is a toast</string>
    <string name="title_activity_module_info">ModuleInfoActivity</string>

</resources>
