<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="planetdave.me.cs4084project.TimetableActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/tt_tv_space"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tt_frame_height"
                android:background="@drawable/tt_border" />

            <TextView
                android:id="@+id/timetable_tv_09"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tt_border"
                android:gravity="center_vertical"
                android:text="@string/tt_09_text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/timetable_tv_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tt_border"
                android:gravity="center_vertical"
                android:text="@string/tt_10_text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/timetable_tv_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tt_border"
                android:gravity="center_vertical"
                android:text="@string/tt_11_text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/timetable_tv_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tt_border"
                android:gravity="center_vertical"
                android:text="@string/tt_12_text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/timetable_tv_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tt_border"
                android:gravity="center_vertical"
                android:text="@string/tt_13_text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/timetable_tv_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tt_border"
                android:gravity="center_vertical"
                android:text="@string/tt_14_text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/timetable_tv_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tt_border"
                android:gravity="center_vertical"
                android:text="@string/tt_15_text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/timetable_tv_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tt_border"
                android:gravity="center_vertical"
                android:text="@string/tt_16_text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/timetable_tv_17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tt_border"
                android:gravity="center_vertical"
                android:text="@string/tt_17_text"
                android:textAlignment="center" />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp">

            <include
                layout="@layout/layout_timetable_frame"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </HorizontalScrollView>
    </LinearLayout>

</LinearLayout>
